--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ body {
     font-family: "Poppins", sans-serif;
     background-color: #4b0082; /* your dark purple */
     color: #fff; /* light text to contrast */
+    height: 100vh;
 }
 
 a {
