--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ li {
     list-style: none;
 }
 li a {
-    color: #4b0082;
+    color: black;
     text-decoration: none;
     background-color: white;
     padding: 8px 10px;
